--- a/src/components/UsersList/UsersList.module.css
+++ b/src/components/UsersList/UsersList.module.css
@@ -4,24 +4,13 @@
     margin: 2rem auto;
 }
 
-.users ul {
+ul {
     list-style: none;
     padding: 1rem;
 }
 
-.users li {
+li {
     border: 1px solid #ccc;
     padding: 0.5rem;
     margin: 0.5rem 0;
 }
-
-/* .users ul {
-  list-style: none;
-  padding: 1rem;
-}
-
-.users li {
-  border: 1px solid #ccc;
-  margin: 0.5rem 0;
-  padding: 0.5rem;
-} */
